<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="event"
            type="com.mburakcakir.taketicket.data.db.entity.EventModel" />
    </data>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardElevation="@dimen/height_line_heighter"
        card_view:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorDarkBackground"
            android:paddingBottom="@dimen/margin_medium">

            <ImageView
                android:id="@+id/imgEventImage"
                loadImageFromUrl="@{event.url}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/viewEvent"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:background="@color/colorDarkBackground"
                app:layout_constraintBottom_toBottomOf="@id/txtEventCategory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgEventImage" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtEventTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{event.title}"
                android:textColor="@color/colorTextFirst"
                android:textSize="@dimen/text_size_big"
                android:textStyle="bold"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="@id/viewEvent"
                app:layout_constraintTop_toTopOf="@id/viewEvent"
                tools:text="@string/event_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtEventTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{event.time}"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/viewEvent"
                app:layout_constraintTop_toTopOf="@id/viewEvent"
                tools:text="@string/event_time" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtEventSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_min"
                android:layout_marginEnd="@dimen/margin_medium"
                android:autoLink="web"
                android:text="@{event.subTitle}"
                android:textColorLink="@color/colorTextFirst"
                app:layout_constraintEnd_toStartOf="@id/txtEventTime"
                app:layout_constraintStart_toStartOf="@id/viewEvent"
                app:layout_constraintTop_toBottomOf="@id/txtEventTitle"
                tools:text="@string/event_subtitle" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtEventCategory"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@{event.category}"
                android:textColor="@color/colorTextFirst"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/txtEventCapacity"
                app:layout_constraintStart_toStartOf="@id/viewEvent"
                app:layout_constraintTop_toTopOf="@id/txtEventCapacity"
                tools:text="@string/event_category" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtEventCapacity"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_medium"
                android:gravity="end"
                android:text="@{`Kapasite: ` + String.valueOf(event.capacity)}"
                app:layout_constraintEnd_toEndOf="@id/viewEvent"
                app:layout_constraintTop_toBottomOf="@id/txtEventSubtitle"
                tools:text="@string/event_capacity" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>